tests/invalid/min_mismatched_types/main.py
def run_case() -> None:
    x: int = 1

    y: float = 2.0

    z: int = min(x, y)

if __name__ == "__main__":
    run_case()
